fix long guild names overlapping in logs

--- a/public/css/src/tracker-log.less
+++ b/public/css/src/tracker-log.less
@@ -139,7 +139,10 @@
                     display: none;
                     @media(min-width: @screen-sm-min) {
                         display: inline-block;
-                        max-width: 10em;
+                        max-width: 15em;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        padding-right: .5em;
                     }
                 }
             }
